adding sources WIP
