# fastapi_backend/app/main.py
@@ -4,6 +4,7 @@ from .users import auth_backend, fastapi_users, AUTH_URL_PATH
 from fastapi.middleware.cors import CORSMiddleware
 from .utils import simple_generate_unique_route_id
 from app.routes.items import router as items_router
+from app.routes.sources import router as sources_router
 from app.config import settings
 
 app = FastAPI(
@@ -49,3 +50,4 @@ app.include_router(
 
 # Include items routes
 app.include_router(items_router, prefix="/items")
+app.include_router(sources_router, prefix="/sources")
